// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleBar /> Snapshot should match snapshot 1`] = `
.c0 {
  background-color: #c3c7cb;
  color: #fefefe;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c3 {
  background-color: #c3c7cb;
  color: #c6c6c6;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #000e7a;
}

.c1 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c4 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #7f787f;
}

.c4 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

<div>
  <div
    class="c0 c1"
    color="headerText"
    height="auto"
    width="auto"
  >
    <img
      height="32"
      src="test-file-stub"
      width="32"
    />
    <div
      class="c2"
    >
      test.exe
    </div>
  </div>
  <div
    class="c3 c4"
    color="headerNotActiveText"
    height="auto"
    width="auto"
  >
    <img
      height="32"
      src="test-file-stub"
      width="32"
    />
    <div
      class="c2"
    >
      test.exe
    </div>
  </div>
  <div
    class="c0 c1"
    color="headerText"
    height="auto"
    width="auto"
  >
    <div
      class="c2"
    >
      UNKNOWN.EXE
    </div>
  </div>
  <div
    class="c3 c4"
    color="headerNotActiveText"
    height="auto"
    width="auto"
  >
    <div
      class="c2"
    >
      UNKNOWN.EXE
    </div>
  </div>
</div>
`;

exports[`<TitleBar /> Snapshot should match snapshot with all Options 1`] = `
.c4 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  color: #000000;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 0px #000000;
}

.c4:disabled {
  color: #868a8e;
}

.c4:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c4:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c0 {
  background-color: #c3c7cb;
  color: #fefefe;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c3 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-weight: 600;
  font-size: 10px;
}

.c5:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c5:first-child {
  margin-right: 0;
}

.c5:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #000e7a;
}

.c1 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

<div>
  <div
    class="c0 c1"
    color="headerText"
    height="auto"
    width="auto"
  >
    <img
      height="32"
      src="test-file-stub"
      width="32"
    />
    <div
      class="c2"
    >
      test.exe
    </div>
    <ul
      class="c3"
    >
      <li
        class="c4 c5"
      >
        ?
      </li>
      <li
        class="c4 c5"
      >
        x
      </li>
    </ul>
  </div>
</div>
`;
